footer works nicely

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,8 +39,8 @@ Ideal for beauty, cosmetics, or lifestyle pro
 */
 html,
 body {
-  background-color: #D4AF37;
-  color: #2A2A2A;
+  background-color: white;
+  color: black;
   margin:0;
   height: 100vh;
 }
