--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+@font-face {
+  font-family: 'Bodoni';
+  src: 
+       url('/fonts/bodoniN.ttf') format('truetype');
+  font-weight: 500;
+  font-style: normal;
+}
 @layer components {
   .h1 {
     @apply font-lato font-bold text-[80px] leading-[80px];
