--- a/src/components/RotatingWords/RotatingWords.module.css
+++ b/src/components/RotatingWords/RotatingWords.module.css
@@ -16,7 +16,7 @@
 }
 
 .words h1 {
-  animation: spin_words 10s 1;
+  animation: spin_words 10s infinite;
   height: 100%;
   padding-left: 1rem;
 }
