--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -38,6 +38,20 @@ body {
   
 }
 
+html {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+body {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
 @layer utilities {
   @keyframes zoom {
     0% {
